# ape

./: .dockerignore  .gitignore  Dockerfile  README.md  ape.opam  ape.opam.locked  docker-compose.yml  dune-project
dune.lock/: atd.pkg  atdgen-runtime.pkg  atdgen.pkg  biniou.pkg  dune-build-info.pkg  lock.dune  ocaml-base-compiler.pkg
lib/: dune  expr_ast.ml  repl_expr_ast.ml  types.ml
lib/grammar/: feat_sys.ml  feat_sys.mli  grammar.ml  grammar.mli  module_types.ml  segment_table.ml  segment_table.mli
lib/grammar/rule_bank/: rule_bank.ml  rule_bank.mli
lib/grammar/rule_bank/rule/: expr.ml  expr.mli  rule.ml  rule.mli
lib/grammar/rule_bank/rule/rewrite/: repl.ml  repl.mli  rewrite.ml  rewrite.mli
lib/grammar/segment_table/: schema.ml  schema.mli  segment_table.ml  segment_table.mli
lib/parsing/: dune  expr_ast.ml  expr_lexer.mll  expr_parser.mly  parsing.ml  repl_expr_ast.ml  repl_expr_lexer.mll  repl_expr_parser.mly  repl_lexer.mll  repl_parser.mly
lib/utils/: choice.ml  choice.mli  flags.mli  named.ml  named.mli  nonempty_list.ml  nonempty_list.mli  utils.ml  utils.mli
