(include_subdirs qualified)

(library
 (name ape)
 (libraries atdgen re yojson)
 (preprocess (staged_pps ppx_import)))

(rule
 (targets config_j.ml
          config_j.mli)
 (deps    config.atd)
 (action  (run atdgen -j -j-std %{deps})))

(rule
 (targets config_t.ml
          config_t.mli)
 (deps    config.atd)
 (action  (run atdgen -t %{deps})))

(rule
 (targets config_v.ml
          config_v.mli)
 (deps    config.atd)
 (action  (run atdgen -v %{deps})))
